--- a/Tier1/Tier1/BlazorAppTier1/Pages/Login/Login.razor.css
+++ b/Tier1/Tier1/BlazorAppTier1/Pages/Login/Login.razor.css
@@ -1,8 +1,7 @@
-/* _content/BlazorAppTier1/Pages/Login/Login.razor.rz.scp.css */
+﻿
 
 
-
-body[b-aq8dnhbdpp]{
+body{
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
     font-size: 15px;
@@ -11,47 +10,47 @@ body[b-aq8dnhbdpp]{
     background-color: #1f2029;
     overflow-x: hidden;
 }
-a[b-aq8dnhbdpp] {
+a {
     cursor: pointer;
     transition: all 200ms linear;
 }
-a:hover[b-aq8dnhbdpp] {
+a:hover {
     text-decoration: none;
 }
-.link[b-aq8dnhbdpp] {
+.link {
     color: #c4c3ca;
 }
-.link:hover[b-aq8dnhbdpp] {
+.link:hover {
     color: #ffeba7;
 }
-p[b-aq8dnhbdpp] {
+p {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.7;
 }
-h4[b-aq8dnhbdpp] {
+h4 {
     font-weight: 600;
 }
-h6 span[b-aq8dnhbdpp]{
+h6 span{
     padding: 0 20px;
     text-transform: uppercase;
     font-weight: 700;
 }
-.section[b-aq8dnhbdpp]{
+.section{
     position: relative;
     width: 100%;
     display: block;
 }
-.full-height[b-aq8dnhbdpp]{
+.full-height{
     min-height: 100vh;
 }
-[type="checkbox"]:checked[b-aq8dnhbdpp],
-[type="checkbox"]:not(:checked)[b-aq8dnhbdpp]{
+[type="checkbox"]:checked,
+[type="checkbox"]:not(:checked){
     position: absolute;
     left: -9999px;
 }
-.checkbox:checked + label[b-aq8dnhbdpp],
-.checkbox:not(:checked) + label[b-aq8dnhbdpp]{
+.checkbox:checked + label,
+.checkbox:not(:checked) + label{
     position: relative;
     display: block;
     text-align: center;
@@ -63,8 +62,8 @@ h6 span[b-aq8dnhbdpp]{
     cursor: pointer;
     background-color: #ffeba7;
 }
-.checkbox:checked + label[b-aq8dnhbdpp]:before,
-.checkbox:not(:checked) + label[b-aq8dnhbdpp]:before{
+.checkbox:checked + label:before,
+.checkbox:not(:checked) + label:before{
     position: absolute;
     display: block;
     width: 36px;
@@ -82,12 +81,12 @@ h6 span[b-aq8dnhbdpp]{
     font-size: 24px;
     transition: all 0.5s ease;
 }
-.checkbox:checked + label[b-aq8dnhbdpp]:before {
+.checkbox:checked + label:before {
     transform: translateX(44px) rotate(-270deg);
 }
 
 
-.card-3d-wrap[b-aq8dnhbdpp] {
+.card-3d-wrap {
     position: relative;
     width: 440px;
     max-width: 100%;
@@ -97,7 +96,7 @@ h6 span[b-aq8dnhbdpp]{
     perspective: 800px;
     margin-top: 60px;
 }
-.card-3d-wrapper[b-aq8dnhbdpp] {
+.card-3d-wrapper {
     width: 100%;
     height: 100%;
     position:absolute;
@@ -107,7 +106,7 @@ h6 span[b-aq8dnhbdpp]{
     transform-style: preserve-3d;
     transition: all 600ms ease-out;
 }
-.card-front[b-aq8dnhbdpp], .card-back[b-aq8dnhbdpp] {
+.card-front, .card-back {
     width: 100%;
     height: 100%;
     background-color: #2a2b38;
@@ -126,13 +125,13 @@ h6 span[b-aq8dnhbdpp]{
     -o-backface-visibility: hidden;
     backface-visibility: hidden;
 }
-.card-back[b-aq8dnhbdpp] {
+.card-back {
     transform: rotateY(180deg);
 }
-.checkbox:checked ~ .card-3d-wrap .card-3d-wrapper[b-aq8dnhbdpp] {
+.checkbox:checked ~ .card-3d-wrap .card-3d-wrapper {
     transform: rotateY(180deg);
 }
-.center-wrap[b-aq8dnhbdpp]{
+.center-wrap{
     position: absolute;
     width: 100%;
     padding: 0 35px;
@@ -144,13 +143,13 @@ h6 span[b-aq8dnhbdpp]{
 }
 
 
-.form-group[b-aq8dnhbdpp]{
+.form-group{
     position: relative;
     display: block;
     margin: 0;
     padding: 0;
 }
-.form-style[b-aq8dnhbdpp] {
+.form-style {
     padding: 13px 20px;
     padding-left: 55px;
     height: 48px;
@@ -168,13 +167,13 @@ h6 span[b-aq8dnhbdpp]{
     transition: all 200ms linear;
     box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
 }
-.form-style:focus[b-aq8dnhbdpp],
-.form-style:active[b-aq8dnhbdpp] {
+.form-style:focus,
+.form-style:active {
     border: none;
     outline: none;
     box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
 }
-.input-icon[b-aq8dnhbdpp] {
+.input-icon {
     position: absolute;
     top: 0;
     left: 18px;
@@ -187,52 +186,52 @@ h6 span[b-aq8dnhbdpp]{
     transition: all 200ms linear;
 }
 
-.form-group input:-ms-input-placeholder[b-aq8dnhbdpp]  {
+.form-group input:-ms-input-placeholder  {
     color: #c4c3ca;
     opacity: 0.7;
     -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
-.form-group input[b-aq8dnhbdpp]::-moz-placeholder  {
+.form-group input::-moz-placeholder  {
     color: #c4c3ca;
     opacity: 0.7;
     -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
-.form-group input:-moz-placeholder[b-aq8dnhbdpp]  {
+.form-group input:-moz-placeholder  {
     color: #c4c3ca;
     opacity: 0.7;
     -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
-.form-group input[b-aq8dnhbdpp]::-webkit-input-placeholder  {
+.form-group input::-webkit-input-placeholder  {
     color: #c4c3ca;
     opacity: 0.7;
     -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
-.form-group input:focus:-ms-input-placeholder[b-aq8dnhbdpp]  {
+.form-group input:focus:-ms-input-placeholder  {
     opacity: 0;
     -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
-.form-group input:focus[b-aq8dnhbdpp]::-moz-placeholder  {
+.form-group input:focus::-moz-placeholder  {
     opacity: 0;
     -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
-.form-group input:focus:-moz-placeholder[b-aq8dnhbdpp]  {
+.form-group input:focus:-moz-placeholder  {
     opacity: 0;
     -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
-.form-group input:focus[b-aq8dnhbdpp]::-webkit-input-placeholder  {
+.form-group input:focus::-webkit-input-placeholder  {
     opacity: 0;
     -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
 
-.btn[b-aq8dnhbdpp]{
+.btn{
     border-radius: 4px;
     height: 44px;
     font-size: 13px;
@@ -260,13 +259,13 @@ h6 span[b-aq8dnhbdpp]{
     color: #102770;
     box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
 }
-.btn:active[b-aq8dnhbdpp],
-.btn:focus[b-aq8dnhbdpp]{
+.btn:active,
+.btn:focus{
     background-color: #102770;
     color: #ffeba7;
     box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
 }
-.btn:hover[b-aq8dnhbdpp]{
+.btn:hover{
     background-color: #102770;
     color: #ffeba7;
     box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
@@ -275,7 +274,7 @@ h6 span[b-aq8dnhbdpp]{
 
 
 
-.logo[b-aq8dnhbdpp] {
+.logo {
     position: absolute;
     top: 30px;
     right: 30px;
@@ -283,142 +282,8 @@ h6 span[b-aq8dnhbdpp]{
     z-index: 100;
     transition: all 250ms linear;
 }
-.logo img[b-aq8dnhbdpp] {
+.logo img {
     height: 26px;
     width: auto;
     display: block;
-}
-/* _content/BlazorAppTier1/Shared/MainLayout.razor.rz.scp.css */
-.page[b-qvllrcxqwe] {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-}
-
-main[b-qvllrcxqwe] {
-    flex: 1;
-}
-
-.sidebar[b-qvllrcxqwe] {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
-}
-
-.top-row[b-qvllrcxqwe] {
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #d6d5d5;
-    justify-content: flex-end;
-    height: 3.5rem;
-    display: flex;
-    align-items: center;
-}
-
-    .top-row[b-qvllrcxqwe]  a, .top-row .btn-link[b-qvllrcxqwe] {
-        white-space: nowrap;
-        margin-left: 1.5rem;
-    }
-
-    .top-row a:first-child[b-qvllrcxqwe] {
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
-
-@media (max-width: 640.98px) {
-    .top-row:not(.auth)[b-qvllrcxqwe] {
-        display: none;
-    }
-
-    .top-row.auth[b-qvllrcxqwe] {
-        justify-content: space-between;
-    }
-
-    .top-row a[b-qvllrcxqwe], .top-row .btn-link[b-qvllrcxqwe] {
-        margin-left: 0;
-    }
-}
-
-@media (min-width: 641px) {
-    .page[b-qvllrcxqwe] {
-        flex-direction: row;
-    }
-
-    .sidebar[b-qvllrcxqwe] {
-        width: 250px;
-        height: 100vh;
-        position: sticky;
-        top: 0;
-    }
-
-    .top-row[b-qvllrcxqwe] {
-        position: sticky;
-        top: 0;
-        z-index: 1;
-    }
-
-    .top-row[b-qvllrcxqwe], article[b-qvllrcxqwe] {
-        padding-left: 2rem !important;
-        padding-right: 1.5rem !important;
-    }
-}
-/* _content/BlazorAppTier1/Shared/NavMenu.razor.rz.scp.css */
-.navbar-toggler[b-4oagloexvm] {
-    background-color: rgba(255, 255, 255, 0.1);
-}
-
-.top-row[b-4oagloexvm] {
-    height: 3.5rem;
-    background-color: rgba(0,0,0,0.4);
-}
-
-.navbar-brand[b-4oagloexvm] {
-    font-size: 1.1rem;
-}
-
-.oi[b-4oagloexvm] {
-    width: 2rem;
-    font-size: 1.1rem;
-    vertical-align: text-top;
-    top: -2px;
-}
-
-.nav-item[b-4oagloexvm] {
-    font-size: 0.9rem;
-    padding-bottom: 0.5rem;
-}
-
-    .nav-item:first-of-type[b-4oagloexvm] {
-        padding-top: 1rem;
-    }
-
-    .nav-item:last-of-type[b-4oagloexvm] {
-        padding-bottom: 1rem;
-    }
-
-    .nav-item[b-4oagloexvm]  a {
-        color: #d7d7d7;
-        border-radius: 4px;
-        height: 3rem;
-        display: flex;
-        align-items: center;
-        line-height: 3rem;
-    }
-
-.nav-item[b-4oagloexvm]  a.active {
-    background-color: rgba(255,255,255,0.25);
-    color: white;
-}
-
-.nav-item[b-4oagloexvm]  a:hover {
-    background-color: rgba(255,255,255,0.1);
-    color: white;
-}
-
-@media (min-width: 641px) {
-    .navbar-toggler[b-4oagloexvm] {
-        display: none;
-    }
-
-    .collapse[b-4oagloexvm] {
-        /* Never collapse the sidebar for wide screens */
-        display: block;
-    }
 }
