--- a/Tier1/Tier1/BlazorAppTier1/Shared/NavMenu.razor
+++ b/Tier1/Tier1/BlazorAppTier1/Shared/NavMenu.razor
@@ -21,7 +21,14 @@
                     <span class="oi oi-list-rich" aria-hidden="true"></span> Get Message
                 </NavLink>
             </div>
-        </nav>
+     </nav>  
+     <nav class="flex-column">
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="Login">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Login
+                    </NavLink>
+                </div>
+            </nav>
 </div>
 
 @code {
