--- a/Tier1/Tier1/BlazorAppTier1/Shared/MainLayout.razor
+++ b/Tier1/Tier1/BlazorAppTier1/Shared/MainLayout.razor
@@ -2,16 +2,9 @@
 
 <PageTitle>BlazorAppTier1</PageTitle>
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu/>
-    </div>
-
+<div class="page background">
+    <NavMenu/>
     <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
-
         <article class="content px-4">
             @Body
         </article>
