added login  and create htmls, the conversion to razor hasnt been done yet.

--- a/Tier1/Tier1/BlazorAppTier1/Shared/NavMenu.razor
+++ b/Tier1/Tier1/BlazorAppTier1/Shared/NavMenu.razor
@@ -6,7 +6,7 @@
 				<div class="col-12">
 					<nav class="navbar navbar-expand-md navbar-light">
 						<a class="navbar-brand" href="https://front.codes/" target="_blank">
-							<img src="https://assets.codepen.io/1462889/fcy.png" alt="">
+							<img src="images/logo.png" alt="">
 						</a>
 						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" >
 							<span class="navbar-toggler-icon"></span>
