--- a/Tier1/Tier1/BlazorAppTier1/Pages/Login/Login.razor
+++ b/Tier1/Tier1/BlazorAppTier1/Pages/Login/Login.razor
@@ -3,7 +3,7 @@
 
 
     <a href="https://front.codes/" class="logo" target="_blank">
-        <img src="https://assets.codepen.io/1462889/fcy.png" alt="">
+        <img src="images/logo.png" alt="">
     </a>
 
     <div class="section">
