Completed login and logout page Added authentication services Added the service interfaces for login havent implemented the http client for Login
-By Sachin Baral

--- a/Tier1/Tier1/BlazorAppTier1/Pages/Login/Login.razor
+++ b/Tier1/Tier1/BlazorAppTier1/Pages/Login/Login.razor
@@ -1,4 +1,10 @@
 ﻿@page "/Login"
+@using Entities.Models 
+@using Contracts   
+@using Microsoft.AspNetCore.Identity
+@inject IAuthService _authService
+@inject IUserService _userService
+@inject  NavigationManager navMgr
 <div id="body">
 
 
@@ -23,16 +29,16 @@
                                         <div class="section text-center">
                                             <h4 class="mb-4 pb-3">Log In</h4>
                                             <div class="form-group">
-                                                <input type="email" name="logemail" class="form-style" placeholder="Your Email" id="logemail" autocomplete="off">
+                                                <input type="text" class="form-style" placeholder="Your Username" autocomplete="off" @bind="UsernameLogin">
                                                 <i class="input-icon uil uil-at"></i>
                                             </div>
                                             <div class="form-group mt-2">
-                                                <input type="password" name="logpass" class="form-style" placeholder="Your Password" id="logpass" autocomplete="off">
+                                                <input type="password" name="logpass" class="form-style" placeholder="Your Password" id="logpass" autocomplete="off" @bind="UsernameLogin">
                                                 <i class="input-icon uil uil-lock-alt"></i>
                                             </div>
-                                            <a href="#" class="btn mt-4">submit</a>
+                                            <button class="btn mt-4" @onclick="LoginAsync">Login</button>
                                             <p class="mb-0 mt-4 text-center">
-                                                <a href="#0" class="link">Forgot your password?</a>
+                                                <a href="#" class="link">Forgot your password?</a>
                                             </p>
                                         </div>
                                     </div>
@@ -42,23 +48,32 @@
                                         <div class="section text-center">
                                             <h4 class="mb-4 pb-3">Sign Up</h4>
                                             <div class="form-group">
-                                                <input type="text" name="logname" class="form-style" placeholder="Your Full Name" id="logname" autocomplete="off">
+                                                <input type="text" class="form-style" placeholder="Your First Name" autocomplete="off" @bind="userSignUp.FirstName">
                                                 <i class="input-icon uil uil-user"></i>
                                             </div>
                                             <div class="form-group mt-2">
-                                                <input type="email" name="logemail" class="form-style" placeholder="Your Email" id="logemail" autocomplete="off">
+                                                <input type="text" class="form-style" placeholder="Your Last Name" autocomplete="off" @bind="userSignUp.LastName">
                                                 <i class="input-icon uil uil-at"></i>
                                             </div>
                                             <div class="form-group mt-2">
-                                                <input type="password" name="logpass" class="form-style" placeholder="Your Password" id="logpass" autocomplete="off">
+                                                <input type="text" class="form-style" placeholder="Choose an username" autocomplete="off" @bind="userSignUp.Username">
+                                                <i class="input-icon uil uil-at"></i>
+                                            </div>
+                                            <div class="form-group mt-2">
+                                                <input type="password" name="logpass" class="form-style" placeholder="Enter Password" id="logpass" autocomplete="off" @bind="userSignUp.Password">
                                                 <i class="input-icon uil uil-lock-alt"></i>
                                             </div>
-                                            <a href="#" class="btn mt-4">submit</a>
+                                            <button class="btn mt-4">Sign Up</button>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> 
+                        @if (!string.IsNullOrEmpty(errorLabel)) {
+                            <div class="errorPrompt">
+                                <label> @errorLabel</label>
+                            </div>
+                        }
                     </div>
                 </div>
             </div>
@@ -67,5 +82,37 @@
 </div>
 
 @code {
+    private string UsernameLogin;
+    private string PasswordLogin;
+    private string errorLabel;
+
+    private User userSignUp = new User();
+
+    private async Task LoginAsync() {
+        errorLabel = string.Empty;
+
+        try {
+            await _authService.LoginAsync(UsernameLogin, PasswordLogin);
+    // Todo navMgr.NavigateTo("/");    
+            errorLabel = $"Hello {UsernameLogin}, whats up buddy??";
+        }
+        catch (Exception e) {
+            errorLabel = $"Error : {e.Message}";
+        }
+    }
+
+    private async Task CreateUserAsync() {
+        errorLabel = string.Empty;
+        try {
+            await _userService.CreateUserAsync(userSignUp);
+            navMgr.NavigateTo("/");
+        }
+        catch (Exception e) {
+            errorLabel = $"Error : {e.Message}";
+        }
+
+    }
+
+
 
 }
