--- a/Tier1/Tier1/BlazorAppTier1/Pages/Login/Login.razor.css
+++ b/Tier1/Tier1/BlazorAppTier1/Pages/Login/Login.razor.css
@@ -1,53 +1,65 @@
 ﻿
-#body{
+#body {
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
     font-size: 15px;
     line-height: 1.7;
     color: #c4c3ca;
     overflow-x: hidden;
+    padding-top: 25px;
 }
+
 a {
     cursor: pointer;
     transition: all 200ms linear;
 }
+
 a:hover {
     text-decoration: none;
 }
+
 .link {
     color: #c4c3ca;
 }
+
 .link:hover {
     color: #ffeba7;
 }
+
 p {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.7;
 }
+
 h4 {
     font-weight: 600;
 }
-h6 span{
+
+h6 span {
     padding: 0 20px;
     text-transform: uppercase;
     font-weight: 700;
 }
-.section{
+
+.section {
     position: relative;
     width: 100%;
     display: block;
 }
-.full-height{
+
+.full-height {
     min-height: 100vh;
 }
+
 [type="checkbox"]:checked,
-[type="checkbox"]:not(:checked){
+[type="checkbox"]:not(:checked) {
     position: absolute;
     left: -9999px;
 }
+
 .checkbox:checked + label,
-.checkbox:not(:checked) + label{
+.checkbox:not(:checked) + label {
     position: relative;
     display: block;
     text-align: center;
@@ -59,8 +71,9 @@ h6 span{
     cursor: pointer;
     background-color: #ffeba7;
 }
+
 .checkbox:checked + label:before,
-.checkbox:not(:checked) + label:before{
+.checkbox:not(:checked) + label:before {
     position: absolute;
     display: block;
     width: 36px;
@@ -78,6 +91,7 @@ h6 span{
     font-size: 24px;
     transition: all 0.5s ease;
 }
+
 .checkbox:checked + label:before {
     transform: translateX(44px) rotate(-270deg);
 }
@@ -93,16 +107,18 @@ h6 span{
     perspective: 800px;
     margin-top: 60px;
 }
+
 .card-3d-wrapper {
     width: 100%;
     height: 100%;
-    position:absolute;
+    position: absolute;
     top: 0;
     left: 0;
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
     transition: all 600ms ease-out;
 }
+
 .card-front, .card-back {
     width: 100%;
     height: 100%;
@@ -122,13 +138,16 @@ h6 span{
     -o-backface-visibility: hidden;
     backface-visibility: hidden;
 }
+
 .card-back {
     transform: rotateY(180deg);
 }
+
 .checkbox:checked ~ .card-3d-wrap .card-3d-wrapper {
     transform: rotateY(180deg);
 }
-.center-wrap{
+
+.center-wrap {
     position: absolute;
     width: 100%;
     padding: 0 35px;
@@ -140,12 +159,13 @@ h6 span{
 }
 
 
-.form-group{
+.form-group {
     position: relative;
     display: block;
     margin: 0;
     padding: 0;
 }
+
 .form-style {
     padding: 13px 20px;
     padding-left: 55px;
@@ -162,14 +182,16 @@ h6 span{
     border: none;
     -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
-    box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
+    box-shadow: 0 4px 8px 0 rgba(21, 21, 21, .2);
 }
+
 .form-style:focus,
 .form-style:active {
     border: none;
     outline: none;
-    box-shadow: 0 4px 8px 0 rgba(21,21,21,.2);
+    box-shadow: 0 4px 8px 0 rgba(21, 21, 21, .2);
 }
+
 .input-icon {
     position: absolute;
     top: 0;
@@ -183,58 +205,65 @@ h6 span{
     transition: all 200ms linear;
 }
 
-.form-group input:-ms-input-placeholder  {
+.form-group input:-ms-input-placeholder {
     color: #c4c3ca;
     opacity: 0.7;
     -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
-.form-group input::-moz-placeholder  {
+
+.form-group input::-moz-placeholder {
     color: #c4c3ca;
     opacity: 0.7;
     -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
-.form-group input:-moz-placeholder  {
+
+.form-group input:-moz-placeholder {
     color: #c4c3ca;
     opacity: 0.7;
     -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
-.form-group input::-webkit-input-placeholder  {
+
+.form-group input::-webkit-input-placeholder {
     color: #c4c3ca;
     opacity: 0.7;
     -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
-.form-group input:focus:-ms-input-placeholder  {
-    opacity: 0;
-    -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
-}
-.form-group input:focus::-moz-placeholder  {
-    opacity: 0;
-    -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
-}
-.form-group input:focus:-moz-placeholder  {
-    opacity: 0;
-    -webkit-transition: all 200ms linear;
-    transition: all 200ms linear;
-}
-.form-group input:focus::-webkit-input-placeholder  {
+
+.form-group input:focus:-ms-input-placeholder {
     opacity: 0;
     -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
 }
 
-.btn{
+.form-group input:focus::-moz-placeholder {
+    opacity: 0;
+    -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
+}
+
+.form-group input:focus:-moz-placeholder {
+    opacity: 0;
+    -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
+}
+
+.form-group input:focus::-webkit-input-placeholder {
+    opacity: 0;
+    -webkit-transition: all 200ms linear;
+    transition: all 200ms linear;
+}
+
+.btn {
     border-radius: 4px;
     height: 44px;
     font-size: 13px;
     font-weight: 600;
     text-transform: uppercase;
-    -webkit-transition : all 200ms linear;
+    -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
     padding: 0 30px;
     letter-spacing: 1px;
@@ -254,21 +283,21 @@ h6 span{
     border: none;
     background-color: #ffeba7;
     color: #102770;
-    box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
+    box-shadow: 0 8px 24px 0 rgba(255, 235, 167, .2);
 }
+
 .btn:active,
-.btn:focus{
+.btn:focus {
     background-color: #102770;
     color: #ffeba7;
-    box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
+    box-shadow: 0 8px 24px 0 rgba(16, 39, 112, .2);
 }
-.btn:hover{
+
+.btn:hover {
     background-color: #102770;
     color: #ffeba7;
-    box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
+    box-shadow: 0 8px 24px 0 rgba(16, 39, 112, .2);
 }
-
-
 
 
 .logo {
@@ -279,8 +308,14 @@ h6 span{
     z-index: 100;
     transition: all 250ms linear;
 }
+
 .logo img {
     height: 26px;
     width: auto;
     display: block;
+}
+
+.errorPrompt {
+    margin-top: 20px;
+    color: red;
 }
