--- a/Tier1/Tier1/BlazorAppTier1/Shared/NavMenu.razor.css
+++ b/Tier1/Tier1/BlazorAppTier1/Shared/NavMenu.razor.css
@@ -320,21 +320,21 @@ h1 span:nth-child(15){
     -webkit-transition: all 300ms linear;
     transition: all 300ms linear;
 }
-#switch {
-    width: 60px;
-    height: 8px;
-    border: 2px solid #8167a9;
-    border-radius: 27px;
-    background: #000;
-    position: relative;
-    display: block;
-    margin: 0 auto;
-    text-align: center;
-    opacity: 1;
-    transform: translate(0);
-    transition: all 300ms linear;
-    transition-delay: 1900ms;
-}
+/*#switch {*/
+/*    width: 60px;*/
+/*    height: 8px;*/
+/*    border: 2px solid #8167a9;*/
+/*    border-radius: 27px;*/
+/*    background: #000;*/
+/*    position: relative;*/
+/*    display: block;*/
+/*    margin: 0 auto;*/
+/*    text-align: center;*/
+/*    opacity: 1;*/
+/*    transform: translate(0);*/
+/*    transition: all 300ms linear;*/
+/*    transition-delay: 1900ms;*/
+/*}*/
 .hero-anime #switch{
     opacity: 0;
     transform: translateY(40px);
