--- a/Tier1/Tier1/BlazorAppTier1/Pages/Login/Login.razor
+++ b/Tier1/Tier1/BlazorAppTier1/Pages/Login/Login.razor
@@ -33,7 +33,7 @@
                                                 <i class="input-icon uil uil-at"></i>
                                             </div>
                                             <div class="form-group mt-2">
-                                                <input type="password" name="logpass" class="form-style" placeholder="Your Password" id="logpass" autocomplete="off" @bind="UsernameLogin">
+                                                <input type="password" name="logpass" class="form-style" placeholder="Your Password" id="logpass" autocomplete="off" @bind="PasswordLogin">
                                                 <i class="input-icon uil uil-lock-alt"></i>
                                             </div>
                                             <button class="btn mt-4" @onclick="LoginAsync">Login</button>
