--- a/Tier1/Tier1/BlazorAppTier1/Pages/Login/Login.razor
+++ b/Tier1/Tier1/BlazorAppTier1/Pages/Login/Login.razor
@@ -63,7 +63,7 @@
                                                 <input type="password" name="logpass" class="form-style" placeholder="Enter Password" id="logpass" autocomplete="off" @bind="userSignUp.Password">
                                                 <i class="input-icon uil uil-lock-alt"></i>
                                             </div>
-                                            <button class="btn mt-4">Sign Up</button>
+                                            <button class="btn mt-4" @onclick="CreateUserAsync">Sign Up</button>
                                         </div>
                                     </div>
                                 </div>
