--- a/Tier1/Tier1/BlazorAppTier1/Shared/NavMenu.razor
+++ b/Tier1/Tier1/BlazorAppTier1/Shared/NavMenu.razor
@@ -24,7 +24,7 @@
 									</div>
 								</li>
 								<li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-									<a class="nav-link" href="#">Portfolio</a>
+									<a class="nav-link" href="PostCreation" role="button">Add </a>
 								</li>
 								<li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
 									<a class="nav-link" href="#">Agency</a>
