--- a/Tier1/Tier1/BlazorAppTier1/Pages/Login/Login.razor
+++ b/Tier1/Tier1/BlazorAppTier1/Pages/Login/Login.razor
@@ -93,7 +93,7 @@
 
         try {
             await _authService.LoginAsync(UsernameLogin, PasswordLogin);
-    // Todo navMgr.NavigateTo("/");    
+            navMgr.NavigateTo("/");    
             errorLabel = $"Hello {UsernameLogin}, whats up buddy??";
         }
         catch (Exception e) {
