--- a/Tier1/Tier1/BlazorAppTier1/Pages/Index.razor
+++ b/Tier1/Tier1/BlazorAppTier1/Pages/Index.razor
@@ -2,6 +2,7 @@
 @page "/{CurrentPage:int}"
 @using Contracts
 @using Entities.Models
+@using BlazorAppTier1.Pages.UIElements
 
 @inject IPostService _postService;
 @inject NavigationManager Navigation
@@ -21,7 +22,7 @@
             <div class="col-lg-3">
                 <div class="sidebar">
                     <div class="widget border-0">
-                        <!--seaching-->
+                        <SearchBar Callback="(s) => SearchPosts(s)"> </SearchBar>
 
                     </div>
 
@@ -144,12 +145,16 @@
 
     private string nextElement = string.Empty;
     private string backElement = string.Empty;
+    private Tracker _tracker;
+    private string _searchTitle = string.Empty;
+
 
     protected override async Task OnInitializedAsync() {
         allCategories = await _postService.GetALlCategoriesAsync();
     //  postToShow = await _postService.GetAllPosts(0);
     // subcategoriesToShow.AddRange(allPosts);
         CurrentPage = 1;
+        _tracker = Tracker.ALLPOSTS;
         await Pagination(CurrentPage);
     }
 
@@ -172,7 +177,16 @@
         int count = 9;
         Navigation.NavigateTo("/" + current);
 
-        postToShow = await _postService.GetAllPosts(current);
+        switch (_tracker) {
+            case Tracker.ALLPOSTS:
+                postToShow = await _postService.GetAllPosts(current);
+                break;
+
+            case Tracker.SEARCHEDPOSTS:
+                postToShow = await _postService.SearchPosts(_searchTitle, current);
+                break;
+        }
+
     //   postToShow = subcategoriesToShow.OrderBy(d=>d.Id).Skip((current-1)*count).Take(count).ToList();
         if (current == 1) {
             backElement = "disabled";
@@ -190,6 +204,14 @@
     }
 
 
+    private async Task SearchPosts(String titleToSearch) {
+        _tracker = Tracker.SEARCHEDPOSTS;
+        _searchTitle = titleToSearch;
+        await Pagination(CurrentPage);
+        
+    }
+
+
     // private async Task UpdateOwnerFilter(ChangeEventArgs args) {
     //     string value = (string) args.Value;
     //     if (string.IsNullOrEmpty(value)) {
@@ -201,6 +223,9 @@
     //     allPosts = await _postService.GetPostsByName(value);
     // }
 
-
+    private enum Tracker {
+        ALLPOSTS,
+        SEARCHEDPOSTS
+    }
 
 }
