--- a/Tier1/Tier1/BlazorAppTier1/Pages/Index.razor
+++ b/Tier1/Tier1/BlazorAppTier1/Pages/Index.razor
@@ -205,6 +205,9 @@
 
 
     private async Task SearchPosts(String titleToSearch) {
+        if (string.IsNullOrEmpty(titleToSearch)) {
+            return;
+        }
         _tracker = Tracker.SEARCHEDPOSTS;
         _searchTitle = titleToSearch;
         await Pagination(CurrentPage);
